CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

PROJECT(WIFISIM)
SET(PROJECT_NAME "wifisim")
STRING (TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWER)

IF(NOT CMAKE_BUILD_TYPE)
   SET(CMAKE_BUILD_TYPE "RELEASE" CACHE STRING "Choose the type of build, options are: RELEASE (default) or DEBUG" FORCE)
ENDIF()
STRING(TOUPPER ${CMAKE_BUILD_TYPE} CMAKE_BUILD_TYPE)

FIND_PACKAGE(NS3 COMPONENTS ns3-core ns3-wifi ns3-internet ns3-applications ns3-network REQUIRED)
INCLUDE_DIRECTORIES(${NS3_INCLUDE_DIR})
ADD_DEFINITIONS(-DNS3_LOG_ENABLE)
SET(SRCS wifisim.cc)

ADD_CUSTOM_COMMAND(
	OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/quicktest.sh
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/quicktest.sh ${CMAKE_CURRENT_BINARY_DIR}/quicktest.sh
	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/quicktest.sh
)
ADD_CUSTOM_COMMAND(
	OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/quicktest.py
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/quicktest.py ${CMAKE_CURRENT_BINARY_DIR}/quicktest.py
	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/quicktest.py
)
ADD_CUSTOM_TARGET(testscript DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/quicktest.sh ${CMAKE_CURRENT_BINARY_DIR}/quicktest.py)

ADD_EXECUTABLE(wifisim ${SRCS})
TARGET_LINK_LIBRARIES(wifisim ${NS3_LIBRARIES})

ADD_DEPENDENCIES(wifisim testscript)

INSTALL(PROGRAMS wifisim ${CMAKE_CURRENT_BINARY_DIR}/wifisim
	DESTINATION share/playernsd/examples)
